# joy-rec

./: .gitignore  README.md  pyproject.toml  setup.py
joyrec/: example.py
joyrec/joydata/: movielens.py  movilens.py
joyrec/joydata/common/: utils.py
