[tool.poetry]
name = "joyrec"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["asher <asher_github@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsingshua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

